# sigh

./: .gitignore  README.md  pyproject.toml  requirements.txt
sigh/: __init__.py  audio_async.py  llm.py  main.py  utils.py  vad.py
tests/: test_memory_buffer.py
tests/unit_tests/: test_memory_buffer.py  test_openai_llm.py
